--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ dependencies {
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'io.projectreactor:reactor-test'
+	testImplementation 'org.assertj:assertj-core:3.22.0'
 }
 
 springBoot {
