--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,8 @@ repositories {
 }
 
 dependencies {
+	// needed when extends WebSecurityConfigurerAdapter
+	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
@@ -24,6 +26,8 @@ dependencies {
 	testImplementation 'org.springframework.security:spring-security-test'
 	testImplementation 'io.projectreactor:reactor-test'
 	testImplementation 'org.assertj:assertj-core:3.22.0'
+
+	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 }
 
 springBoot {
